// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

(null: empty); // Error: null ~> empty

=====================================output=====================================
/**
 * @format
 * @flow
 */

(null: empty); // Error: null ~> empty

================================================================================
`;

exports[`text_break.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/**
 * @format
 * @flow
 */

({a: {b: {c: {d: {e: {f: {g: {h: 42}}}}}}}}: {
  a: {b: {c: {d: {e: {f: {g: {h: empty}}}}}}},
});

=====================================output=====================================
/**
 * @format
 * @flow
 */

({ a: { b: { c: { d: { e: { f: { g: { h: 42 } } } } } } } }: {
  a: { b: { c: { d: { e: { f: { g: { h: empty } } } } } } },
});

================================================================================
`;
